[gd_scene load_steps=15 format=3 uid="uid://c0iivkwkhpe8y"]

[ext_resource type="Script" path="res://scenes/ui/upgrade_menu.gd" id="1_lqbc3"]
[ext_resource type="Theme" uid="uid://dmpi6gp8ax486" path="res://theme.tres" id="2_6jnyg"]
[ext_resource type="Script" path="res://scenes/ui/restock_shop.gd" id="4_7ucpu"]
[ext_resource type="Texture2D" uid="uid://bq07qdnmialrh" path="res://assets/sprites/coin.png" id="5_mt14o"]

[sub_resource type="Animation" id="Animation_n4yyk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 648)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dtrdi"]
resource_name = "from_bottom"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 648), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_oloy2"]
resource_name = "from_left"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(-1152, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bmqcq"]
resource_name = "from_right"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(1152, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7agmu"]
resource_name = "from_top"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, -648), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dk281"]
resource_name = "to_bottom"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(3.13834, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 648)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_agagc"]
resource_name = "to_left"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(3.13834, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1152, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wrau4"]
resource_name = "to_right"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(3.13834, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1152, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kv3r7"]
resource_name = "to_top"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(3.13834, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -648)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vf74j"]
_data = {
"RESET": SubResource("Animation_n4yyk"),
"from_bottom": SubResource("Animation_dtrdi"),
"from_left": SubResource("Animation_oloy2"),
"from_right": SubResource("Animation_bmqcq"),
"from_top": SubResource("Animation_7agmu"),
"to_bottom": SubResource("Animation_dk281"),
"to_left": SubResource("Animation_agagc"),
"to_right": SubResource("Animation_wrau4"),
"to_top": SubResource("Animation_kv3r7")
}

[node name="UpgradeMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_lqbc3")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 648.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2_6jnyg")

[node name="Panel" type="Panel" parent="Control"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.15
anchor_right = 0.9
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 9.0
offset_right = -8.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 36
text = "Upgrades"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="UpgradeContainer" type="GridContainer" parent="Control/Panel/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 35
theme_override_constants/margin_bottom = 35

[node name="RestockShop" type="Control" parent="Control/Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.37
theme = ExtResource("2_6jnyg")
script = ExtResource("4_7ucpu")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/VBoxContainer/MarginContainer/RestockShop"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -35.0
offset_right = 112.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestockButton" type="Button" parent="Control/Panel/VBoxContainer/MarginContainer/RestockShop/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel/VBoxContainer/MarginContainer/RestockShop/VBoxContainer/RestockButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_right = 29.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/VBoxContainer/MarginContainer/RestockShop/VBoxContainer/RestockButton/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Name" type="Label" parent="Control/Panel/VBoxContainer/MarginContainer/RestockShop/VBoxContainer/RestockButton/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Restock"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="HBoxContainer" parent="Control/Panel/VBoxContainer/MarginContainer/RestockShop/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Control/Panel/VBoxContainer/MarginContainer/RestockShop/VBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_mt14o")

[node name="PriceLabel" type="Label" parent="Control/Panel/VBoxContainer/MarginContainer/RestockShop/VBoxContainer/Control"]
layout_mode = 2
text = "1223"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vf74j")
}
speed_scale = 2.0

[connection signal="pressed" from="Control/Panel/VBoxContainer/MarginContainer/RestockShop/VBoxContainer/RestockButton" to="." method="_on_restock_button_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/MarginContainer/RestockShop/VBoxContainer/RestockButton" to="Control/Panel/VBoxContainer/MarginContainer/RestockShop" method="_on_button_pressed"]
